[gd_scene load_steps=2 format=3 uid="uid://d2c52t2lwofsw"]

[ext_resource type="Script" path="res://nodes/game_over.gd" id="1_4gwmg"]

[node name="GameOver" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4gwmg")

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(320, 180)
layout_mode = 0
offset_right = 281.0
offset_bottom = 179.0

[node name="Restart" type="Button" parent="."]
layout_mode = 0
offset_left = 56.0
offset_top = 72.0
offset_right = 144.0
offset_bottom = 102.0
text = "Restart"

[node name="Exit" type="Button" parent="."]
layout_mode = 0
offset_left = 176.0
offset_top = 72.0
offset_right = 264.0
offset_bottom = 103.0
text = "Exit"

[node name="ScoreText" type="Label" parent="."]
layout_mode = 0
offset_left = 128.0
offset_top = 8.0
offset_right = 192.0
offset_bottom = 30.0
text = "Score"
horizontal_alignment = 1

[node name="Score" type="Label" parent="."]
layout_mode = 0
offset_left = 128.0
offset_top = 40.0
offset_right = 192.0
offset_bottom = 62.0
text = "300"
horizontal_alignment = 1

[node name="HighScoreText" type="Label" parent="."]
layout_mode = 0
offset_left = 96.0
offset_top = 112.0
offset_right = 224.0
offset_bottom = 134.0
text = "High Score"
horizontal_alignment = 1

[node name="HighScore" type="Label" parent="."]
layout_mode = 0
offset_left = 128.0
offset_top = 144.0
offset_right = 192.0
offset_bottom = 166.0
text = "500"
horizontal_alignment = 1

[connection signal="pressed" from="Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_exit_pressed"]
